BE-refactor : redis add, category recommend add